# moonranger_kinematics

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: kinematics.yaml
launch/: kinematics.launch
msg/: BodyVel.msg  DriveArc.msg  WheelRates.msg
scripts/: kinematics.py
scripts/moonranger_kinematics/: four_wheel.py  kinematics.py  two_wheel.py  utils.py
tests/: test_four_wheel.py  test_kinematics.py  test_two_wheel.py
